--- a/readings.tex
+++ b/readings.tex
@@ -94,6 +94,7 @@ We name the plagues and spill a drop of drink on each one, like a tear for the s
 	\begin{itemize}
 		\vspace*{2ex}
 		How many times do we forget to pause and notice that where we are? Dayenu reminds us about all the blessings and miracles already in our lives. When we experience difficult times, we look forward to future joys but also actively reflect on existing reasons we have for gratitude, a reason to say “Dayenu”.
+		How many times do we forget to pause and notice that where we are? Dayenu reminds us about all the blessings and miracles already in our lives. When we experience difficult times, we look forward to future joys but also actively reflect on existing reasons we have for gratitude, a reason to say \textit{“Dayyeinu”}.
 		\vspace*{2ex}
 		Persian and Afghani Jews hit each other on the heads and shoulders with scallions every time they say Dayenu, especially in the 9th stanza about the manna that the Israelites ate every day in the desert, because Torah tells us that the Israelites began to complain about the manna and longed for the onions, leeks and garlic.\\	
 		\vspace*{2ex}
