--- a/couching.tex
+++ b/couching.tex
@@ -108,18 +108,13 @@
 	\centering\textit{now put the glass down without drinking}\\
 	%
 	\centering{\PlaguesText}
-	
-	Many are the things HaShem did for the sake of our ancestors.\\
-	Any one of these things by itself would have sufficed: Dayyeinu.\\
-	\vspace*{2ex}
 	%\textit{
 	%	Persian Jews hit each other with a Spring Onion at each of the following lines, to symbolise the whips of the slavemasters.\\
 	%	{\large Sarah is allergic to onion so is exempt from being whacked}
 	%	}
 	
 	*maybe find a song version of the dayyeinu and put the words out so we can listen and hit when we spot the word dayyeinu*\\
-	\vspace*{2ex}
-	\centering{\large Dayyeinu}
+	\DayyeinuIntro
 	\DayyeinuText
 	\vspace*{2ex}
 	\RabbiGamliel
