--- a/readings.tex
+++ b/readings.tex
@@ -12,6 +12,8 @@
 \setotherlanguages{czech, hebrew}
 %\newfontfamily{\hebrewfont}{New Peninim MT}
 % 
+\usepackage{enumerate}
+
 
 \newcommand{\HaLachmaTlit}{%
 	Ha lachma anya di achalu
@@ -47,17 +49,17 @@
 		\end{enumerate}
 }
 \newcommand{\FourChildrenText}{
-The Talmud describes four types of children at the Pesach table, and how to respond to them
-\begin{enumerate}
-	\item \raggedright{The wise child, who asks: What are the testimonies and laws which God commanded you?} \\
-	\raggedleft{and should be taught the rules of the holiday.}
-	\item \raggedright{The wicked child, who removes himself from the question and asks: What does this service mean to you individually?} \\
-	\raggedleft{and should be taught about community and put in his place}
-	\item The simple child who asks, What is this about? \\
-	\raggedleft{and should be told of G-d's mighty deliverence plainly}
-	\item The child who doesn’t know how to ask a question\\
-	\raggedleft{who should be aided and told the story}
-	\end{enumerate}
+	The Talmud describes four types of children at the Pesach table, and how to respond to them
+	\begin{enumerate}
+		\item \raggedright{The wise child, who asks: What are the testimonies and laws which God commanded you?} \\
+		\raggedleft{and should be taught the rules of the holiday.}
+		\item \raggedright{The wicked child, who removes himself from the question and asks: What does this service mean to you individually?} \\
+		\raggedleft{and should be taught about community and put in his place}
+		\item The simple child who asks, What is this about? \\
+		\raggedleft{and should be told of G-d's mighty deliverence plainly}
+		\item The child who doesn’t know how to ask a question\\
+		\raggedleft{who should be aided and told the story}
+		\end{enumerate}
 }
 %
 \newcommand{\MaggidText}{%
@@ -74,201 +76,211 @@ We name the plagues and spill a drop of drink on each one, like a tear for the s
 \begin{center}
 	%\begin{itemize}
 		\color{sectioncolour}
-		\item 	\texthebrew{דָּם}  |  Dam  |  Blood
-		\item 	\texthebrew{צְפַרְדֵּעַ}  |  Tz'fardeiya  |  Frogs
-		\item 	\texthebrew{כִּנִּים}  |  Kinim  |  Lice
-		\item	\texthebrew{עַרוֹב}  |  A'rov  |  Beasts
-		\item	\texthebrew{דֶּבֶר}  |  Dever  |  Cattle disease  
-		\item	\texthebrew{שְׁחִין}  |  Sh'chin  |  Boils
-		\item 	\texthebrew{בָּרָד}  |  Barad  |  Hail
-		\item 	\texthebrew{אַרְבֶּה}  |  Ar'beh  |  Locusts
-		\item 	\texthebrew{חוֹשֶׁךְ}  |  Choshech  |  Darkness
-		\item 	\texthebrew{מַכַּת בְּכוֹרוֹת}  |  Makkat b'chorot  |  Death of the Firstborn
+		\item 	\largehebrew{דָּם}  |  Dam  |  Blood
+		\item 	\largehebrew{צְפַרְדֵּעַ}  |  Tz'fardeiya  |  Frogs
+		\item 	\largehebrew{כִּנִּים}  |  Kinim  |  Lice
+		\item	\largehebrew{עַרוֹב}  |  A'rov  |  Beasts
+		\item	\largehebrew{דֶּבֶר}  |  Dever  |  Cattle disease  
+		\item	\largehebrew{שְׁחִין}  |  Sh'chin  |  Boils
+		\item 	\largehebrew{בָּרָד}  |  Barad  |  Hail
+		\item 	\largehebrew{אַרְבֶּה}  |  Ar'beh  |  Locusts
+		\item 	\largehebrew{חוֹשֶׁךְ}  |  Choshech  |  Darkness
+		\item 	\largehebrew{מַכַּת בְּכוֹרוֹת}  |  Makkat b'chorot  |  Death of the Firstborn
 	%\end{itemize}	
 \end{center}
+\par}
 
-}
-
+\newcommand{\DayyeinuIntro}{
+	\vspace*{2ex}
+	\begin{center}
+		{\large Dayyeinu}
+		\end{center}
+	\vspace*{2ex}
+	
+	How many times do we forget to pause and notice that where we are? Dayyeinu reminds us about all the blessings and miracles already in our lives. When we experience difficult times, we look forward to future joys but also actively reflect on existing reasons we have for gratitude, a reason to say \textit{“Dayyeinu”}.\par
+	\vspace*{2ex}
+	 
+	\noindent {Persian and Afghani Jews hit each other on the heads and shoulders with scallions every time they say Dayyeinu, especially in the 9th stanza about the Manna the Israelites ate each day in the desert, because Torah tells us that the Israelites began to complain about the manna and longed for the onions, leeks and garlic of Egypt.}\par
+	}
 
 \newcommand{\DayyeinuText}{%
-	\begin{itemize}
+	Many are the things HaShem did for the sake of our ancestors.\par
+	Any one of these things by itself would have sufficed: Dayyeinu.\par
+	We read these as though we ourselves experienced the first Exodus, through the words of our ancestors:\par
+	\vspace*{2ex}
+	\begin{enumerate}
 		\vspace*{2ex}
-		How many times do we forget to pause and notice that where we are? Dayenu reminds us about all the blessings and miracles already in our lives. When we experience difficult times, we look forward to future joys but also actively reflect on existing reasons we have for gratitude, a reason to say “Dayenu”.
-		How many times do we forget to pause and notice that where we are? Dayenu reminds us about all the blessings and miracles already in our lives. When we experience difficult times, we look forward to future joys but also actively reflect on existing reasons we have for gratitude, a reason to say \textit{“Dayyeinu”}.
-		\vspace*{2ex}
-		Persian and Afghani Jews hit each other on the heads and shoulders with scallions every time they say Dayenu, especially in the 9th stanza about the manna that the Israelites ate every day in the desert, because Torah tells us that the Israelites began to complain about the manna and longed for the onions, leeks and garlic.\\	
-		\vspace*{2ex}
-		If He had brought us out from Egypt...\\
-		\textit{Ilu hotzianu mimitzrayim...}\\
-		\texthebrew{אִלּוּ הוֹצִיאָנוּ מִמִּצְרָיִם...}\\
-		\vspace*{2ex}
-		\raggedleft{...and had not carried out judgments against them...\\
-		\textit{...v'lo asah bahem sh'fatim...}\\
-		\texthebrew{וְלֹא עָשָׂה בָּהֶם שְׁפָטִים...}\\}
-		\vspace*{2ex}
-		\centering{...it would have been enough!\\
-		\textit{...Dayeinu!}\\
-		\texthebrew{\LARGE ...דַּיֵּנוּ}\\}
-		\vspace*{2ex}
+		%1
+		\item {
+		\raggedright{If He had brought us out from Egypt...\\
+			\textit{Ilu hotzianu mimitzrayim...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ הוֹצִיאָנוּ מִמִּצְרָיִם...}\\}
+		\raggedleft{...and not carried out judgments against the Egyptians...\\
+			\textit{...v'lo asah bahem sh'fatim...}\\
+			\largehebrew{וְלֹא עָשָׂה בָּהֶם שְׁפָטִים...}\\}
+		\DayyeinuRepeat \vspace*{2ex}
+		}
+		%2
+		\item{
 		\raggedright{If He had carried out judgments against them...\\
-		\textit{Ilu asah bahem sh'fatim...}\\
-		\texthebrew{אִלּוּ עָשָׂה בָּהֶם שְׁפָטִים...}\\}
-		\vspace*{2ex}
+			\textit{Ilu asah bahem sh'fatim...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ עָשָׂה בָּהֶם שְׁפָטִים...}\\}
 		\raggedleft{...and not against their idols...\\
-		\textit{...v'lo asah beloheihem...}\\
-		\texthebrew{...וְלֹא עָשָׂה בֵּאלֹהֵיהֶם...}\\
-		\vspace*{2ex}
-		\centering{...it would have been enough!\\		
-		\textit{...Dayeinu!}\\
-		\texthebrew{...דַּיֵּנוּ}\\}
-		\vspace*{2ex}		
-		\raggedright{If He had destroyed their idols...\\
-		\textit{Ilu asah beloheihem...}\\
-		\texthebrew{אִלּוּ עָשָׂה בֵּאלֹהֵיהֶם...}\\}
-		\vspace*{2ex}
-		\raggedleft{...and had not smitten their first-born...\\
-		\textit{...v'lo harag et b'choreihem...}
-		\texthebrew{...וְלֹא הָרַג אֶת בְּכוֹרֵיהֶם...}\\}	
-		\vspace*{2ex}
-		\centering{...it would have been enough!\\
-		\textit{...Dayeinu!}\\
-		\texthebrew{...דַּיֵּנוּ}\\}
-		\vspace*{2ex}
+			\textit{...v'lo asah beloheihem...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא עָשָׂה בֵּאלֹהֵיהֶם...}\\}
+		\DayyeinuRepeat \vspace*{2ex}
+		}
+		%3
+		\item 
+		{\raggedright{If He had destroyed their idols...\\
+			\textit{Ilu asah beloheihem...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ עָשָׂה בֵּאלֹהֵיהֶם...}\\}
+		\raggedleft{...and not smitten their first-born...\\
+			\textit{...v'lo harag et b'choreihem...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא הָרַג אֶת בְּכוֹרֵיהֶם...}\\}	
+		\DayyeinuRepeat	\vspace*{2ex}
+		}
+		%4
+		\item{
 		\raggedright{If He had smitten their first-born...\\
-		\textit{Ilu harag et b'choreihem...}\\
-		\texthebrew{אִלּוּ הָרַג אֶת בְּכוֹרֵיהֶם...}\\}
-		\vspace*{2ex}
-		\raggedleft{...and had not given us their wealth...\\		
-		\textit{...v'lo natan lanu et mamonam...}\\
-		\texthebrew{...וְלֹא נָתַן לָנוּ אֶת מָמוֹנָם...}\\}
-		\vspace*{2ex}		
-		\centering{...it would have been enough!\\
-		\textit{...Dayeinu!}\\
-		\texthebrew{...דַּיֵּנוּ}\\}
-		\vspace*{2ex}
-		If He had given us their wealth,
-		Ilu natan lanu et mamonam,
-		\texthebrew{אִלּוּ נָתַן לָנוּ אֶת מָמוֹנָם}
-		
-		and had not split the sea for us
-		v'lo kara lanu et hayam,
-		\texthebrew{ןלא קָרַע לָנוּ אֶת הַיָּם}
-
-		— Dayenu, it would have been enough!
-		dayeinu!
-		\texthebrew{דַּיֵּנוּ}
-		
-		If He had split the sea for us,
-		Ilu kara lanu et hayam,
-		\texthebrew{אִלּוּ קָרַע לָנוּ אֶת הַיָּם}
-		
-		and had not taken us through it on dry land
-		v'lo he'eviranu b'tocho becharavah,
-		\texthebrew{וְלֹא הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה}
-
-		— Dayenu, it would have been enough!		
-		dayeinu!
-		\texthebrew{דַּיֵּנוּ}
-
-		If He had taken us through the sea on dry land,		
-		Ilu he'eviranu b'tocho becharavah,
-		\texthebrew{אִלּוּ הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה}
-
-		and had not drowned our oppressors in it		
-		v'lo shika tzareinu b'tocho,
-		\texthebrew{וְלֹא שִׁקַע צָרֵינוּ בְּתוֹכוֹ}
-
-		— Dayenu, it would have been enough!
-		dayeinu!
-		\texthebrew{דַּיֵּנוּ}
-
-		If He had drowned our oppressors in it,
-		Ilu shika tzareinu b'tocho,
-		\texthebrew{אִלּוּ שִׁקַע צָרֵינוּ בְּתוֹכוֹ}
-
-		and had not supplied our needs in the desert for forty years
-		v'lo sipeik tzorkeinu bamidbar arba'im shana,
-		\texthebrew{וְלֹא סִפֵּק צָרַכֵּנוּ בַּמִּדְבָּר אַרְבָּעִים שָׁנָה}
-
-		— Dayenu, it would have been enough!
-		dayeinu!
-		\texthebrew{דַּיֵּנוּ}
-
-		If He had supplied our needs in the desert for forty years,
-		Ilu sipeik tzorkeinu bamidbar arba'im shana,
-		\texthebrew{אִלּוּ סִפֵּק צָרַכֵּנוּ בַּמִּדְבָּר אַרְבָּעִים שָׁנָה}
-		
-		and had not fed us the manna
-		v'lo he'echilanu et haman,
-		\texthebrew{וְלֹא הֶאֱכִילָנוּ אֶת הַמָּן}
-
-		— Dayenu, it would have been enough!
-		dayeinu!
-		\texthebrew{דַּיֵּנוּ}
-
-		If He had fed us the manna,		
-		Ilu he'echilanu et haman,
-		\texthebrew{אִלּוּ הֶאֱכִילָנוּ אֶת הַמָּן}
-		
-		and had not given us the Shabbat
-		v'lo natan lanu et hashabbat,
-		\texthebrew{וְלֹא נָתַן לָנוּ אֶת הַשַּׁבָּת}		
-		
-		— Dayenu, it would have been enough!
-		dayeinu!
-		\texthebrew{דַּיֵּנוּ}	
-		
-		If He had given us the Shabbat,
-		Ilu natan lanu et hashabbat,
-		\texthebrew{אִלּוּ נָתַן לָנוּ אֶת הַשַּׁבָּת}
-		
-		and had not brought us before Mount Sinai
-		v'lo keirvanu lifnei har sinai,
-		\texthebrew{וְלֹא קֵרְבָנוּ לִפְנֵי הַר סִינַי}
-		
-		— Dayenu, it would have been enough!
-		dayeinu!
-		\texthebrew{דַּיֵּנוּ}
-
-		If He had brought us before Mount Sinai,
-		Ilu keirvanu lifnei har sinai,
-		\texthebrew{אִלּוּ קֵרְבָנוּ לִפְנֵי הַר סִינַי}
-		
-		and had not given us the Torah
-		v'lo natan lanu et hatorah,
-		\texthebrew{וְלֹא נָתַן לָנוּ אֶת הַתּוֹרָה}
-		
-		— Dayenu, it would have been enough!
-		dayeinu!
-		\texthebrew{דַּיֵּנוּ}		
-		
-		If He had given us the Torah,
-		Ilu natan lanu et hatorah,
-		\texthebrew{אִלּוּ נָתַן לָנוּ אֶת הַתּוֹרָה}
-		
-		and had not brought us into the land of Israel
-		v'lo hichnisanu l'eretz yisra'eil,
-		\texthebrew{וְלֹא הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל}
-		
-		— Dayenu, it would have been enough!
-		dayeinu!
-		\texthebrew{דַּיֵּנוּ}
-		
-		If He had brought us into the land of Israel,
-		Ilu hichnisanu l'eretz yisra'eil,
-		\texthebrew{אִלּוּ הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל}
-
-		and not built for us the Holy Temple
-		v'lo vanah lanu et beit hamikdash,
-		\texthebrew{וְלֹא בָּנָה לָנוּ אֶת בֵּית הַמִּקְדָּשׁ}
-		
-		— Dayenu, it would have been enough!
-		dayeinu!
-		\texthebrew{דַּיֵּנוּ}
-		
-	\end{itemize}
+			\textit{Ilu harag et b'choreihem...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ הָרַג אֶת בְּכוֹרֵיהֶם...}\\}
+		\raggedleft{...and not given us their wealth...\\		
+			\textit{...v'lo natan lanu et mamonam...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא נָתַן לָנוּ אֶת מָמוֹנָם...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}
+		%5
+		\item{
+		\raggedright{If He had given us their wealth...\\
+			\textit{Ilu natan lanu et mamonam...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ נָתַן לָנוּ אֶת מָמוֹנָם...}\\}
+		\raggedleft{...and not split the sea for us...\\
+			\textit{...v'lo kara lanu et hayam...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...ןלא קָרַע לָנוּ אֶת הַיָּם...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}	
+		%6
+		\item{
+		\raggedright{If He had split the sea for us...\\
+			\textit{Ilu kara lanu et hayam...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ קָרַע לָנוּ אֶת הַיָּם...}\\}
+		\raggedleft{...and not taken us through it on dry land...\\
+			\textit{...v'lo he'eviranu b'tocho becharavah...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}
+		%7
+		\item{
+		\raggedright{If He had taken us through the sea on dry land...\\
+			\textit{Ilu he'eviranu b'tocho becharavah...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה...}\\}
+		\raggedleft{...and not drowned our oppressors in it...\\
+			\textit{...v'lo shika tzareinu b'tocho...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא שִׁקַע צָרֵינוּ בְּתוֹכוֹ...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}
+		%8		
+		\item{
+		\raggedright{If He had drowned our oppressors in it...\\
+			\textit{Ilu shika tzareinu b'tocho...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ שִׁקַע צָרֵינוּ בְּתוֹכוֹ...}\\}
+		\raggedleft{...and not cared for us in the desert for 40 years...\\
+			\textit{...v'lo sipeik tzorkeinu bamidbar arba'im shana...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא סִפֵּק צָרַכֵּנוּ בַּמִּדְבָּר אַרְבָּעִים שָׁנָה...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}	
+		%9	
+		\item{
+		\raggedright{If He had cared for us in the desert for 40 years...\\
+			\textit{Ilu sipeik tzorkeinu bamidbar arba'im shana...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ סִפֵּק צָרַכֵּנוּ בַּמִּדְבָּר אַרְבָּעִים שָׁנָה...}\\}
+		\raggedleft{...and not fed us the manna...\\
+			\textit{...v'lo he'echilanu et haman...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא הֶאֱכִילָנוּ אֶת הַמָּן...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}
+		%10		
+		\item{
+		\raggedright{If He had fed us the manna...\\
+			\textit{Ilu he'echilanu et haman...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ הֶאֱכִילָנוּ אֶת הַמָּן...}\\}
+		\raggedleft{...and not given us the Shabbat...\\
+			\textit{...v'lo natan lanu et hashabbat...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא נָתַן לָנוּ אֶת הַשַּׁבָּת...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}	
+		%11
+		\item{
+		\raggedright{If He had given us the Shabbat...\\
+			\textit{Ilu natan lanu et hashabbat...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ נָתַן לָנוּ אֶת הַשַּׁבָּת...}\\}
+		\raggedleft{...and not brought us before Mount Sinai...\\
+			\textit{...v'lo keirvanu lifnei har sinai...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא קֵרְבָנוּ לִפְנֵי הַר סִינַי...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}
+		%12	
+		\item{ 
+		\raggedright{If He had brought us before Mount Sinai...\\
+			\textit{Ilu keirvanu lifnei har sinai...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ קֵרְבָנוּ לִפְנֵי הַר סִינַי...}\\}
+		\raggedleft{...and not given us the Torah...\\
+			\textit{...v'lo natan lanu et hatorah...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא נָתַן לָנוּ אֶת הַתּוֹרָה...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}	
+		%13
+		\item{
+		\raggedright{If He had given us the Torah...\\
+			\textit{Ilu natan lanu et hatorah...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ נָתַן לָנוּ אֶת הַתּוֹרָה...}\\}
+		\raggedleft{...and not brought us into the land of Israel...\\
+			\textit{...v'lo hichnisanu l'eretz yisra'eil...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}
+		%14
+		\item{
+		\raggedright{If He had brought us into the land of Israel...\\
+			\textit{Ilu hichnisanu l'eretz yisra'eil...}\\
+			\vspace*{0.25ex}
+			\largehebrew{אִלּוּ הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל...}\\}
+		\raggedleft{...and not built for us the Holy Temple...\\
+			\textit{...v'lo vanah lanu et beit hamikdash...}\\
+			\vspace*{0.25ex}
+			\largehebrew{...וְלֹא בָּנָה לָנוּ אֶת בֵּית הַמִּקְדָּשׁ...}\\}
+		\DayyeinuRepeat	\vspace*{2ex}
+		}	
+	\end{enumerate}
 	Danielle and Misha Slutsky, https://www.recustom.com/clips/4063687.
 }
+
 \newcommand{\RabbiGamliel}
 {Rabbi Gamliel instructs us to take note of the following. Do you know what they symbolise?
 	Shank Bone : the temple sacrifice of a spotless lamb each year to commemorate the lamb whose blood was painted on the doorways of the israelites in Egypt, so that Gd would know not to slay any firstborn within that home
@@ -309,8 +321,8 @@ world. Amen.}
 \newcommand{\HallelHeb}{
 	\begin{center}
 		%\textdir TRT
-		\texthebrew{\Large הַֽלְלוּ הַֽלְלוּ הַֽלְלוּ הַֽלְלוּ הַֽלְלוּ הַ֥לְלוּ־יָ֨הּ}\\
-		\texthebrew{\LARGE  כֹּ֣ל הַ֭נְּשָׁמָה תְּהַלֵּ֥ל יָ֗הּ הַֽלְלוּ־יָֽהּ הַ֥לְלוּ־יָ֨הּ}
+		\largehebrew{\Large הַֽלְלוּ הַֽלְלוּ הַֽלְלוּ הַֽלְלוּ הַֽלְלוּ הַ֥לְלוּ־יָ֨הּ}\\
+		\largehebrew{\LARGE  כֹּ֣ל הַ֭נְּשָׁמָה תְּהַלֵּ֥ל יָ֗הּ הַֽלְלוּ־יָֽהּ הַ֥לְלוּ־יָ֨הּ}
 	\end{center}
 	\vspace*{2ex}
 }
