--- a/blessings.tex
+++ b/blessings.tex
@@ -26,6 +26,8 @@
 	
 \newcommand{\CandlesBlessingEng}
 	{ May you be blessed, Lord our G-d, ruler of the universe, who sanctifies us via his commandments and who commands us to light the lights of Shabbat and festivals.}
+\newcommand{\CandlesBlessingCz}{
+Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, jenž nás posvětil Svými přikázáními a přikázal nám zapálit světlo (šabatové a) sváteční.}
 
 \newcommand{\WineBlessingHeb}{
 	\begin{center}
@@ -41,6 +43,8 @@
 		
 \newcommand{\WineBlessingEng}
 		{We thank You Lord our God, ruler of the universe, for making the fruit of the vine.}
+		
+\newcommand{\WineBlessingCz}{Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, stvořiteli plodů vinné révy.}
 
 \newcommand{\ShehechyanuBlessingHeb}{	
 	\begin{center}
@@ -59,6 +63,8 @@
 	Baruch atah Adonai eloheinu melech ha-olam Shehechyanu V'kiymanu v'higiyanu lazman ha-zeh.
 }
 % 
+\newcommand{\ShehechyanuBlessingCz}{Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, že jsi nám dopřál dožít se, dočkat se a dosáhnout tohoto času.}
+
 \newcommand{\KarpasBlessingHeb}{	
 	\begin{center}
 		%\textdir TRT
@@ -75,16 +81,19 @@
 	We thank You God, for making food grow from the ground.
 }
 % 
-
-\newcommand{\NetilatYadayim}{
+\newcommand{\KarpasBlessingCz}{Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, stvořiteli plodů země.}
+%
+\newcommand{\NetilatYadayimHeb}{
 	\begin{center}
 		%\textdir TRT
 		\texthebrew{\Large בָּרוּךְ אַתָּה אֲ-דֹנָי אֱ-לֹהֵינוּ מֶלֶךְ הָעוֹלָםאֲ שֶּ ר קִ ד ש ָּ נוְּ ּבמִ צֹו תָּ יו,}\\
 		\texthebrew{\LARGE  וְצִוָּנוּ עַל נְטִילַת יָדַיִם}
-	\end{center}
-	\vspace*{2ex}ְָּּ 
+	\end{center}}
+\newcommand{\NetilatYadayimTlit}{
 	Baruch Atah Adonai, Eloheinu Melech ha-olam, asher kid’shanu b’mitzvotav
 	v’tzivanu al n’tilat yadayim.}
+
+\newcommand{\NetilatYadayimCz}{Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, jenž nás posvětil Svými přikázáními a přikázal nám přikázání ohledně umývání rukou.}
 %	
 \newcommand{\HaMotziBlessingHeb}{	
 	\begin{center}
@@ -100,7 +109,7 @@
 \newcommand{\HaMotziBlessingEng}{%
 	Blessed are you, Lord our God, ruler of the universe who brings forth bread from the earth.}
 %
-
+\newcommand{\HaMotziBlessingCz}{\textcolor{red}{FIXME : Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, původce chleba ze země/kdo nese....který neseš... chléb ze země/přináší chléb ze země?}}
 
 	
 \newcommand{\MatzahBlessingHeb}{
@@ -112,19 +121,55 @@
 	Baruch Atah Adonai, Eloheinu Melech ha-olam, asher kid’shanu b’mitzvotav
 	v’tzivanu al achilat matzah.}
 \newcommand{\MatzahBlessingEng}{%
-	We praise God, Ruler of Everything, who made us holy through obligations, commanding us to eat matzah.}
+	We praise God, Ruler of Everything, who makes us holy through his commandments, and commands us to eat matzah.}
+\newcommand{\MatzahBlessingCz}{jenž nás posvětil Svými přikázáními a přikázal nám přikázání jíst matzah.}
+%
 %
 \newcommand{\MarorBlessingHeb}{
 	\begin{center}
 			\texthebrew{\Large בָּרוּךְ אַתָּה אֲ-דֹנָי אֱ-לֹהֵינוּ מֶלֶךְ הָעוֹלָםאֲ שֶּ ר קִ ד ש ָּ נוְּ ּבמִ צֹו תָּ יו,}\\
 			\texthebrew{\LARGE  צ וִ ּנ ָּוְּ ּע ַל אֲ כיִ לתְַּ מרֹורְּ}
 	\end{center}}
+%
 \newcommand{\MarorBlessingTlit}{%
 	Baruch Atah Adonai, Eloheinu Melech ha-olam, asher kid’shanu b’mitzvotav
 v’tzivanu al achilat maror.}
+%
 \newcommand{\MarorBlessingEng}{%
 	We praise God, Ruler of Everything, who made us holy through obligations, commanding us to eat bitter herbs.}
-
+%
+\newcommand{\MarorBlessingCz}{jenž nás posvětil Svými přikázáními a přikázal nám přikázání jíst hořké byliny.}
+%
+%
+\newcommand{\BareichEng}{
+\raggedright
+\textit{We will say the Birkat Hamazon (Grace after meals) with some extra parts:}
+Birkat Hazan: We praise God for sustaining life and providing food for all creatures.\\ %(sung)
+We praise God, Ruler of Everything, whose goodness sustains the world. You are
+the origin of love and compassion, the source of bread for all. Thanks to You, we
+need never lack for food; You provide food enough for everyone. We praise God,
+source of food for everyone.
+\centered{\LARGE Amen}\\
+BirkatHaAretz: We thank God for being compassionate and nourishing us with food and Torah. %recount Exodus to Canaan. 
+As it says in the Torah: When you have eaten and are satisfied, give praise to your
+God who has given you this good earth. We praise God for the earth and for its
+sustenance, and for the words of Torah which are sweet like honey on the tongue and a lamp to light our feet (ps: 119)
+\centered{\LARGE Amen}\\
+\\Just as God sustained the Jewish people in the desert, so too God sustains us now and in the future. 
+\centered{\LARGE Amen}\\
+BirkatYerushalayim: We ask God for His mercy and continued support %, and traditionally to quickly rebuild Jerusalem.
+\centered{\LARGE Amen}\\
+\\BirkatHaTovVHameitiv: We remember the blessings God bestows upon us. %and request God never denies us anything good.\\
+\centered{\LARGE Amen}\\
+\\Harahaman \textit{(May the compassionate one)}\\
+We ask God, to uplift us and our community, and all the world.\\
+Renew our spiritual center in our time. We praise God, who centers us.
+May the source of peace grant peace to us, to the Jewish people, and to the entire
+world.
+\centered{\LARGE Amen}\\
+Bendigamos\\
+Spanish and Portugese Jews sing a Ladino song entitled “Bendigamos,” or “We will bless,” (let's try to find it on spotify)}
+%
 \newcommand{\MiriamBlessing}{
 include a blessing here for water and also for women}
 \newcommand{\NirtzahBlessing}{%
