--- a/haggadah.tex
+++ b/haggadah.tex
@@ -166,8 +166,8 @@
 \textit{music should be played here}
 
 \section{Bareich : Grace after the meal}
-\textit{Fill your third glass}
-\BareichText
+\textit{Fill your third glass}\\
+\Bareich
 \Kaddeish
 
 \section{Hallel : Praise}
